// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea input TextArea input component has correct attributes: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) "watch" option or vm.$watch on an array value will no longer trigger on array mutation unless the "deep" option is specified. If current usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ WATCH_ARRAY: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/watch.html",
    "
",
    " at <TextArea",
    "id=""",
    "errorMessages=",
    [],
    "name=""",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`TextArea input TextArea input component sets floatLabels correctly: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "isHtml" with v-bind value \`false\` will render isHtml="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrInputLayout",
    "id=""",
    "name=""",
    "description=""",
    " ...",
    ">",
    "
",
    " at <TextArea",
    "id=""",
    "errorMessages=",
    [],
    "name=""",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "readonlyLabel" with v-bind value \`false\` will render readonlyLabel="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrInputLayout",
    "id=""",
    "name=""",
    "description=""",
    " ...",
    ">",
    "
",
    " at <TextArea",
    "id=""",
    "errorMessages=",
    [],
    "name=""",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "showLengthCount" with v-bind value \`false\` will render showLengthCount="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrInputLayout",
    "id=""",
    "name=""",
    "description=""",
    " ...",
    ">",
    "
",
    " at <TextArea",
    "id=""",
    "errorMessages=",
    [],
    "name=""",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;
